
[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools>=61.0"]
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.





[project]

name = "stadb"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.0.6"  # REQUIRED, although can be dynamic
description = "SensorThings API database connector for advanced functionalities"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["sta", "setuptools", "development", "sensorthings"]

authors = [
  {name = "Enoc Martínez", email = "enoc.martinez@upc.edu" }
]

maintainers = [
  {name = "Enoc Martínez", email = "enoc.martinez@upc.edu" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "rich>=12.5.1",
  "pandas>=1.4.3",
  "psycopg2-binary>=2.9.1"
]

[project.urls]
"Homepage" = "https://github.com/EnocMartinez/stadb"
"Source" = "https://github.com/EnocMartinez/stadb"


[tool.setuptools]